Add note on contacting me for new tensometers

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		Input the readings from the tensometer into
 		the table on the left. The chart on the right visualizes the wheel condition.</p>
 		<p><a href="about.html">What is this and how to use it?</a></p>
+		<p>Have some other tension meter model and want to add it here? Contact me: konstantin@shemyak.com</p>
 		
 		<div id="wheelchart">
 			<div id="divStartButton">
